<resources>
    <string name="app_name">UnizuluCardSystem</string>
    <string name="admin">Admin</string>
    <string name="enter_your_email_address">enter your email address</string>
    <string name="enter_your_password">enter your password</string>
    <string name="email_address">Email Address</string>
    <string name="employee">Employee</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="todo1">TODO</string>
    <string name="password">Password</string>
    <string name="student">Student</string>
    <string name="not_registered_register_here">Not Registered? Register Here</string>
    <string name="enter_your_initials">enter your initials</string>
    <string name="enter_your_names">enter your names</string>
    <string name="create_your_password">create your password</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="enter_your_student_number">enter your student number</string>
    <string name="enter_your_resident_name">enter your resident name</string>
    <string name="enter_your_surname">enter your surname</string>
    <string name="enter_the_year_you_are_registering_for">enter the year you are registering for</string>
    <string name="email_address_reg">Email Address</string>
    <string name="post_grad">Post_grad</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">REGISTER</string>
    <string name="registration_form">Registration Form</string>
    <string name="residential_address">Residential Address</string>
    <string name="student_number">Student Number</string>
    <string name="password_reg">Password</string>
    <string name="surname">Surname</string>
    <string name="tittle">Tittle</string>
    <string name="enter_your_tittle">enter your tittle</string>
    <string name="degree_type">Degree Type</string>
    <string name="enter_your_identity_number">enter your identity number</string>
    <string name="enter_your_email_addres">enter your email address</string>
    <string name="identity_number">Identity Number</string>
    <string name="firstname">Firstname</string>
    <string name="initials">Initials</string>
    <string name="under_grad">Under_grad</string>
    <string name="year">Year</string>
    <string name="save">SAVE</string>
    <string name="loading">Loading....</string>
    <string name="id_number">Id Number</string>
    <string name="res_name">Res name</string>
    <string name="student_number_card">Student Number</string>
    <string name="surame">Surame</string>
    <string name="initials_card">Initials</string>
    <string name="tittle_card">Tittle</string>
    <string name="year_card">Year</string>
    <string name="kwadlangezwa_campus">Kwadlangezwa Campus</string>
    <string name="upload">UPLOAD</string>
    <string name="update_your_identity_number">update your identity number</string>
    <string name="update_your_tittle">update your tittle</string>
    <string name="upadate_your_names">upadate your names</string>
    <string name="update_your_initials">update your initials</string>
    <string name="update_your_resident_name">update your resident name</string>
    <string name="update_your_phone_number">update your phone number</string>
    <string name="update_your_studebt_number">update your studebt number</string>
    <string name="update_your_surname">update your surname</string>
    <string name="update_year">update year</string>
    <string name="update">UPDATE</string>
    <string name="update_profile">update profile</string>
    <string name="dowload_card">Dowload Card</string>
    <string name="logout">Logout</string>
    <string name="lost_card">Lost Card</string>
    <string name="change_password">Change Password</string>
    <string name="update_profilee">Update Profile</string>
    <string name="logout1">Logout</string>
    <string name="welcome_to_unizulu_card_system">Welcome to Unizulu Card System</string>
    <string name="change_password1">CHANGE PASSWORD</string>
    <string name="current_email_address">Current Email Address</string>
    <string name="enter_your_current_email_address">enter your current email address</string>
    <string name="enter_your_current_password">enter your current password</string>
    <string name="enter_your_new_password">enter your new password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password_update">change_password</string>
    <string name="email_address1">Email Address</string>
    <string name="employee1">Employee</string>
    <string name="student1">Student</string>
    <string name="admin1">Admin</string>
    <string name="loadings">Loading</string>
    <string name="kwadlangezwa_campus_virtualcard">Kwadlangezwa Campus</string>
    <string name="kwadlangezwa_campus1">Kwadlangezwa Campus</string>
    <string name="enter_your_email_you_registered_with">enter_your email you registered with!</string>
    <string name="email_addres">Email Address</string>
    <string name="todoj">todoj</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="admin_number">Admin Number</string>
    <string name="enter_your_registration_number">enter your registration number</string>
    <string name="employee_number">Employee number</string>
</resources>